[package]
name = "xero-rs"
version = "0.0.5-alpha.1"
edition = "2018"
description = "A Xero API client library for Rust"
license-file = "LICENSE"
repository = "https://github.com/slickbench/xero-rs"
keywords = ["xero", "api", "client", "finance"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = { version = "4", default-features = false, features = [
    "reqwest",
    "rustls-tls",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "tokio-native-tls",
    "json",
] }

url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["serde", "v4"] }

rust_decimal = "1"

# Tracing
tracing = "0.1"

# Errors
thiserror = "1"

[dev-dependencies]
rust_decimal_macros = "1.15"
lazy_static = "1"
warp = "0.3"
tokio = { version = "1", default-features = false, features = [
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
