[package]
name = "xero-rs"
version = "0.2.0-alpha.2"
edition = "2024"
description = "A Xero API client library for Rust"
license-file = "LICENSE"
repository = "https://github.com/slickbench/xero-rs"
keywords = ["xero", "api", "client", "finance"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = { version = "5", default-features = false, features = [
    "reqwest",
    "rustls-tls",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
] }

url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.2", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

rust_decimal = "1"

# Tracing
tracing = "0.1"

# Errors
thiserror = "2"
miette = { version = "7" }
tokio = { version = "1", features = ["time", "macros"] }
tokio-retry = "0.3.0"

[dev-dependencies]
rust_decimal_macros = "1.15"
lazy_static = "1"
warp = { version = "0.4", features = ["server"] }
regex = "1"
tokio = { version = "1", default-features = false, features = [
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
    "test-util",
] }
anyhow = "1"
tracing-subscriber = "0.3"
miette = { version = "7", features = ["fancy"] }
serial_test = "3"
